--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,10 +148,24 @@ nav a:hover{
 /*=================================
   main styling starts here
 =================================*/
+.banner-div{
+  width: 100%;
+  height: 500px;
+  display: inline-block;
+}
+.tcquote{
+  background-color:rgb(93,5,141);
+}
+.tcquote h2{
+  text-align: center;
+  color: white;
+  padding: 35px 0;
+  font-size: 32px;
+  font-weight: bold;
+}
+.slider{
 
-
-
-
+}
 
 
 
