--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,28 +183,60 @@ nav a:hover{
   width: 95%;
   margin: 0 auto;
 }
+.films-video{
+  width: 100%;
+  height: auto;
+  margin: 50px auto;
+}
 .film-1{
   width: 100%;
-  margin: 30px 0;
+  display: inline-block;
+  
 }
 .film-2{
   width: 100%;
-  margin: 30px 0;
+  display: inline-block;
+  margin-top: 30px;
 }
 .video{
-  width: 40%;
-  height: 250px;
+  width: 38%;
   float: left;
+  /*background: #70a593;*/
+  height: 200px;
+  background-image:url('../images/video_image.jpg');
+  background-size: cover;
 }
 .abtvideo{
-  width: 59%;
+  width: 60%;
   float: left;
+  background-color: rgb(231,232,232);
+  height: 200px;
+  
 }
 .v-name{
-
+  font-size: 25px;
+  font-weight: bold;
+  padding: 20px 0 10px 25px;
 }
 .v-desc{
-
+  width: 95%;
+  font-size: 16px;
+  padding: 20px 0 10px 25px;
+}
+.see-more-films{
+  margin: 30px auto;
+}
+.btn{
+  text-align: center;
+}
+.btn a{
+  padding: 10px 30px;
+  border: 1px solid;
+  border-radius: 30px;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: white;
+  background-color:rgba(52,173,242);
 }
 /*=================================
   main styling ends here
