--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,8 +163,58 @@ nav a:hover{
   font-weight: bold;
 }
 .slider{
-
+  max-width: 100px;
+  position: relative;
+  margin: auto;
 }
+.showSlide{
+  display:none;
+}
+.showSlide img{
+  width: 100%;
+}
+.left,.right{
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top:-22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;  
+  border-radius: 0 3px 3px 0;  
+}
+.left:hover, .right:hover {  
+  background-color: rgba(115, 115, 115, 0.8);  
+}
+.active {  
+  background-color: #717171;  
+} 
+.move {  
+  -webkit-animation-name: move;  
+  -webkit-animation-duration: 1.5s;  
+  animation-name: fade;  
+  animation-duration: 1.5s;  
+}  
+@-webkit-keyframes move {  
+  from {  
+      opacity: .4  
+  }  
+  to {  
+      opacity: 1  
+  }  
+}  
+
+@keyframes move {  
+  from {  
+      opacity: .4  
+  }  
+  to {  
+      opacity: 1  
+  }  
+}  
 .films{
   margin: 50px auto;
   width: 60%;
