height of slider changed and prev and next classes added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,7 +149,7 @@ nav a:hover{
 =================================*/
 .banner-div{
   width: 100%;
-  height: 500px;
+  height: 650px;
   display: inline-block;
 }
 .tcquote{
@@ -171,6 +171,7 @@ nav a:hover{
 }
 .showSlide img{
   width: 100%;
+  height: 543.33px;
 }
 .left,.right{
   cursor: pointer;
@@ -192,6 +193,12 @@ nav a:hover{
   right: 0;  
   border-radius: 3px 0 0 3px;  
 } 
+.prev{
+  display: none;
+}
+.next{
+  display: block;
+}
 .active {  
   background-color: #717171;  
 } 
