--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -353,13 +353,135 @@ section{
 /*=================================
   footer styling starts here
 =================================*/ 
+.footr{
+  background-color: rgb(224,224,225);
+}
+.f-flex{
+  width: 85%;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  padding: 50px;
+  border-bottom: 0.6px solid;
+  border-color:rgba(151,151,153);  
+}
+.f1{
+  width: 200px;
+  border-right: 0.5px solid;
+  padding: 0 auto;
+  border-color:rgba(151,151,153);  
+}
+.f-logo{
+  width: 154px;
+  height: 60px;
+}
+.f-logo a{
+  padding: 20px 0;
+}
+.f-logo a img{
 
+}
+.f2{
+  width: 200px;
+  padding: 0 50px 0 50px;
+  border-right: 0.5px solid;
+  border-color: rgba(151,151,153);
+}
+.list1{
+  width: 60%;
+  float: left;
+}
+.list2{
+  width: 40%;
+  float: left;
+}
+.list1 li{
+display: block;
+}
+.list2 li{
+  display: block;
+}
+.list1 li a,.list2 li a{
+  line-height: 2;
+  color: rgb(102, 97, 97);
+  font-size: 12px;
+}
+.f3{
+  padding: 0 50px;
+  border-right: 0.5px solid;
+  
+  border-color:rgba(151,151,153); 
+}
+.fhead1 h3{
+  line-height: 2;
+  font-weight: bold;
+  font-size: 15px;
+}
+.soc2{}
+.facebook a,.youtube a,.twitter a {
+  color: rgb(102, 97, 97);
+  padding: 0 10px;
+  font-size: 14px;
+}
+.facebook .fab.fa-facebook,.youtube .fab.fa-youtube,.twitter .fab.fa-twitter{
+  font-size: 12px;
+  padding: 5px;
+  border: 0.6px solid;
+  border-radius: 20px;
+  border-color:rgba(151,151,153); 
+  color: rgba(151,151,153);
+  margin: 3px;
+}
 
+.f4{
+  width: 270px;
+  margin: 0 auto;
+}
+.fhead h3{
+  line-height: 2;
+  font-weight: bold;
+  font-size: 15px;
+}
+.moto{
+  font-size: 12.84666px;
+  padding: 0 28px 0px 0;
+  text-align: justify;
+}
+.moto p{
+  color: rgba(151,151,153);
+}
+.email{
+  padding: 20px 0;
+}
+.email .fas.fa-envelope{
+  font-size: 12px;
+  padding: 5px;
+  border: 0.6px solid;
+  border-radius: 20px;
+  border-color:rgba(151,151,153); 
+  color: rgba(151,151,153);
+  margin: 3px;
+}
+.email a{
+font-size: 12px;
+color: rgb(102, 97, 97);
+}
+.fctpr{
+  width: 85%;
+  padding: 30px 45px;
+}
+.fctpr-cont{
 
+}
+.pp{
 
+}
+a{
 
+}
+.rs{
 
-
+}
  /*=================================
   footer styling ends here
 =================================*/ 
