--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,9 +232,6 @@ section{
   margin: 50px auto;
   width: 60%;
 }
-.films-about{
-
-}
 .films-about h2{
   text-align: center;
   font-size: 35px;
@@ -254,7 +251,6 @@ section{
 .film-1{
   width: 100%;
   display: inline-block;
-  
 }
 .film-2{
   width: 100%;
@@ -432,7 +428,6 @@ display: block;
   color: rgba(151,151,153);
   margin: 3px;
 }
-
 .f4{
   width: 270px;
   margin: 0 auto;
@@ -467,20 +462,22 @@ font-size: 12px;
 color: rgb(102, 97, 97);
 }
 .fctpr{
-  width: 85%;
-  padding: 30px 45px;
+  padding: 20px 45px;
 }
-.fctpr-cont{
-
+.tc{
+  display: inline;
+  margin-right: 30px;
 }
 .pp{
-
-}
-a{
-
+  display: inline;
 }
 .rs{
-
+  display: inline;
+  float: right;
+}
+.tc a,.pp a,.rs a{
+  font-size: 12px;
+  color: rgb(102, 97, 97);
 }
  /*=================================
   footer styling ends here
